[package]
name = "modaws"
version = "0.1.0"
authors = ["Steve Jones <steve@iaascream.cloud>"]
edition = "2018"
license = "MIT"
description = "Command line utility for transformation of AWS service models."
readme = "README.md"
repository = "https://github.com/sjones4/modaws/"

[dependencies]
clap = "2.33.0"
macro_macro = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"